fixed wrong path in utilization config file

--- a/cluster-trace-gpu-v2020/prediction/model_configs/tasks_vs_no_tasks/utilization_no_tasks.yaml
+++ b/cluster-trace-gpu-v2020/prediction/model_configs/tasks_vs_no_tasks/utilization_no_tasks.yaml
@@ -20,6 +20,6 @@ model:
 
 evaluation_path:
   save_to_file: True
-  training_prediction_path: "../evaluation/task_vs_no_task/util_lstm_train_no_tasks.csv"
-  test_prediction_path: "../evaluation/task_vs_no_task/util_lstm_test_no_tasks.csv"
+  training_prediction_path: "evaluation/task_vs_no_task/util_lstm_train_no_tasks.csv"
+  test_prediction_path: "evaluation/task_vs_no_task/util_lstm_test_no_tasks.csv"
 
