Added field to configuration

--- a/cluster-trace-gpu-v2020/prediction/model_configs/tasks_vs_no_tasks/utilization_no_tasks.yaml
+++ b/cluster-trace-gpu-v2020/prediction/model_configs/tasks_vs_no_tasks/utilization_no_tasks.yaml
@@ -23,3 +23,6 @@ evaluation_path:
   training_prediction_path: "evaluation/task_vs_no_task/util_lstm_train_no_tasks.csv"
   test_prediction_path: "evaluation/task_vs_no_task/util_lstm_test_no_tasks.csv"
 
+logging:
+  enable_wandb: False
+
