--- a/cluster-trace-gpu-v2020/prediction/environment.yml
+++ b/cluster-trace-gpu-v2020/prediction/environment.yml
@@ -1,62 +1,7 @@
-name: ml_pytorch
+name: lstm_prediction
 channels:
   - conda-forge
-  - defaults
-dependencies:
-  - python=3.9
   - pytorch
-  - jupyter_client
-  - ptyprocess
-  - ipython
-  - pure_eval
-  - prompt-toolkit
-  - libsodium
-  - setuptools
-  - libcxx
-  - python-dateutil
-  - traitlets
-  - backcall
-  - jedi
-  - matplotlib-inline
-  - tk
-  - pexpect
-  - appnope
-  - xz
-  - asttokens
-  - six
-  - jupyter_core
-  - entrypoints
-  - certifi
-  - pygments
-  - pip
-  - ca-certificates
-  - decorator
-  - ncurses
-  - debugpy
-  - nest-asyncio
-  - sqlite
-  - executing
-  - parso
-  - readline
-  - wheel
-  - libffi
-  - pickleshare
-  - tzdata
-  - zlib
-  - zeromq
-  - stack_data
-  - pyzmq
-  - openssl
-  - wcwidth
-  - tornado
-  - ipykernel
-  - numpy
-  - pandas
-  - matplotlib
-  - scikit-learn
-name: ml_pytorch
-channels:
-  - conda-forge
   - defaults
 dependencies:
   - python=3.9
@@ -112,4 +57,10 @@ dependencies:
   - scikit-learn
   - wandb
   - autopep8
-prefix: /Users/macbook/opt/miniconda3/envs/ml_pytorch
+  - tqdm
+  - onnx
+  - tensorboard
+  - pydot
+  - torchaudio
+  - torchvision
+  - seaborn
