Added different yaml configuration files and also added new keywords to existing ones

--- a/cluster-trace-gpu-v2020/prediction/model_configs/batch_size/large_batch_size.yaml
+++ b/cluster-trace-gpu-v2020/prediction/model_configs/batch_size/large_batch_size.yaml
@@ -6,7 +6,7 @@ dataset:
   batch_size: 2000
 
 model:
-  name: "Utilization LSTM Model with Instances"
+  name: "Utilization LSTM Model with Large Batch Size"
   save_model: True
   num_epochs: 100
   learning_rate: 0.0002
@@ -23,6 +23,6 @@ model:
 
 evaluation_path:
   save_to_file: True
-  loss_progression: "evaluation/all/loss_progression_with_instances.csv"
-  training_prediction_path: "evaluation/all/util_lstm_train_with_instances.csv"
-  test_prediction_path: "evaluation/all/util_lstm_test_with_instances.csv"
+  loss_progression: "evaluation/all/loss_progression_with_large_batch_size.csv"
+  training_prediction_path: "evaluation/all/util_lstm_train_with_large_batch_size.csv"
+  test_prediction_path: "evaluation/all/util_lstm_test_with_large_batch_size.csv"
