--- a/cluster-trace-gpu-v2020/prediction/model_configs/tasks_vs_no_tasks/utilization_no_tasks.yaml
+++ b/cluster-trace-gpu-v2020/prediction/model_configs/tasks_vs_no_tasks/utilization_no_tasks.yaml
@@ -19,12 +19,10 @@ model:
     min_lr: 0.00001
     eps: 0.000000001
 
+  loss: "MSE"
+
 evaluation_path:
   save_to_file: True
   loss_progression: "evaluation/task_vs_no_task/loss_progression_no_tasks.csv"
   training_prediction_path: "evaluation/task_vs_no_task/util_lstm_train_no_tasks.csv"
   test_prediction_path: "evaluation/task_vs_no_task/util_lstm_test_no_tasks.csv"
-
-logging:
-  enable_wandb: False
-
