--- a/cluster-trace-gpu-v2020/prediction/model_configs/batch_size/small_batch_size.yaml
+++ b/cluster-trace-gpu-v2020/prediction/model_configs/batch_size/small_batch_size.yaml
@@ -3,10 +3,10 @@ dataset:
   small_df: True
   include_tasks: True
   include_instance: True
-  batch_size: 2000
+  batch_size: 500
 
 model:
-  name: "Utilization LSTM Model with Instances"
+  name: "Utilization LSTM Model with Small Batch Size"
   save_model: True
   num_epochs: 100
   learning_rate: 0.0002
@@ -23,6 +23,6 @@ model:
 
 evaluation_path:
   save_to_file: True
-  loss_progression: "evaluation/all/loss_progression_with_instances.csv"
-  training_prediction_path: "evaluation/all/util_lstm_train_with_instances.csv"
-  test_prediction_path: "evaluation/all/util_lstm_test_with_instances.csv"
+  loss_progression: "evaluation/all/loss_progression_with_small_batch_size.csv"
+  training_prediction_path: "evaluation/all/util_lstm_train_with_small_batch_size.csv"
+  test_prediction_path: "evaluation/all/util_lstm_test_with_small_batch_size.csv"
