--- a/cluster-trace-gpu-v2020/prediction/.gitattributes
+++ b/cluster-trace-gpu-v2020/prediction/.gitattributes
@@ -2,3 +2,4 @@ training_df.csv filter=lfs diff=lfs merge=lfs -text
 test_df.csv filter=lfs diff=lfs merge=lfs -text
 training_df_small.csv filter=lfs diff=lfs merge=lfs -text
 test_df_small.csv filter=lfs diff=lfs merge=lfs -text
+datasets/df_instance.csv filter=lfs diff=lfs merge=lfs -text
